[tool.poetry]
name = "stock-trading-reinforced-learning"
version = "1.0.0"
description = ""
authors = [
    "Anthony Y. Zhu <anthonyzhu@cmail.carleton.ca>"
]
license = "MIT"
readme = "README.md"
packages = [
  {include = "data", from = "src"},
  {include = "algorithms", from = "src"},
  {include = "envs", from = "src"},
  {include = "enums", from = "src"},
  {include = "models", from = "src"}
]

[tool.poetry.scripts]
basic = "src.algorithms.basic:demo"
q_learning = "src.algorithms.q_learning:demo"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
gymnasium = "^0.29.1"
matplotlib = "^3.8.0"
pandas = "^1.5"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[tool.black]
line-length = 150

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
